@@ -24,6 +24,7 @@ import org.apache.iotdb.common.rpc.thrift.TConsensusGroupType;
 import org.apache.iotdb.common.rpc.thrift.TDataNodeLocation;
 import org.apache.iotdb.common.rpc.thrift.TEndPoint;
 import org.apache.iotdb.common.rpc.thrift.TRegionReplicaSet;
+import org.apache.iotdb.common.rpc.thrift.TSStatus;
 import org.apache.iotdb.common.rpc.thrift.TSeriesPartitionSlot;
 import org.apache.iotdb.common.rpc.thrift.TTimePartitionSlot;
 import org.apache.iotdb.commons.partition.DataPartitionTable;
@@ -32,11 +33,15 @@ import org.apache.iotdb.commons.partition.SeriesPartitionTable;
 import org.apache.iotdb.confignode.consensus.request.ConfigPhysicalPlanType;
 import org.apache.iotdb.confignode.consensus.request.read.region.GetRegionInfoListPlan;
 import org.apache.iotdb.confignode.consensus.request.write.database.DatabaseSchemaPlan;
+import org.apache.iotdb.confignode.consensus.request.write.database.DeleteDatabasePlan;
+import org.apache.iotdb.confignode.consensus.request.write.database.PreDeleteDatabasePlan;
 import org.apache.iotdb.confignode.consensus.request.write.partition.CreateDataPartitionPlan;
 import org.apache.iotdb.confignode.consensus.request.write.partition.CreateSchemaPartitionPlan;
+import org.apache.iotdb.confignode.consensus.request.write.region.BatchRemoveRegionCreateTasksPlan;
 import org.apache.iotdb.confignode.consensus.request.write.region.CreateRegionGroupsPlan;
 import org.apache.iotdb.confignode.consensus.request.write.region.OfferRegionMaintainTasksPlan;
 import org.apache.iotdb.confignode.consensus.response.partition.RegionInfoListResp;
+import org.apache.iotdb.confignode.exception.DatabaseNotExistsException;
 import org.apache.iotdb.confignode.persistence.partition.PartitionInfo;
 import org.apache.iotdb.confignode.persistence.partition.maintainer.RegionCreateTask;
 import org.apache.iotdb.confignode.persistence.partition.maintainer.RegionDeleteTask;
@@ -44,6 +49,7 @@ import org.apache.iotdb.confignode.persistence.partition.maintainer.RegionMainta
 import org.apache.iotdb.confignode.persistence.partition.maintainer.RegionMaintainType;
 import org.apache.iotdb.confignode.rpc.thrift.TDatabaseSchema;
 import org.apache.iotdb.confignode.rpc.thrift.TShowRegionReq;
+import org.apache.iotdb.rpc.TSStatusCode;
 
 import org.apache.thrift.TException;
 import org.apache.tsfile.external.commons.io.FileUtils;
@@ -52,8 +58,10 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.io.DataInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -148,6 +156,17 @@ public class PartitionInfoTest {
     partitionInfo.offerRegionMaintainTasks(generateOfferRegionMaintainTasksPlan());
 
     Assert.assertTrue(partitionInfo.processTakeSnapshot(snapshotDir));
+    try (final DataInputStream inputStream =
+        new DataInputStream(
+            Files.newInputStream(new File(snapshotDir, "partition_info.bin").toPath()))) {
+      // Keep the historical snapshot framing: next RegionGroupId followed by database count.
+      Assert.assertEquals(
+          Math.max(
+              schemaRegionReplicaSet.getRegionId().getId(),
+              dataRegionReplicaSet.getRegionId().getId()),
+          inputStream.readInt());
+      Assert.assertEquals(1, inputStream.readInt());
+    }
 
     PartitionInfo partitionInfo1 = new PartitionInfo();
     partitionInfo1.processLoadSnapshot(snapshotDir);
@@ -162,7 +181,16 @@ public class PartitionInfoTest {
     // it cannot block the recreation of that region's other replicas.
 
     // The offer plan mixes two RegionCreateTasks with one legacy RegionDeleteTask.
-    partitionInfo.offerRegionMaintainTasks(generateOfferRegionMaintainTasksPlan());
+    final OfferRegionMaintainTasksPlan offerPlan = generateOfferRegionMaintainTasksPlan();
+    final RegionCreateTask createTask =
+        (RegionCreateTask) offerPlan.getRegionMaintainTaskList().get(0);
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema("root.sg")));
+    final CreateRegionGroupsPlan createRegionGroupsPlan = new CreateRegionGroupsPlan();
+    createRegionGroupsPlan.addRegionGroup("root.sg", createTask.getRegionReplicaSet());
+    partitionInfo.createRegionGroups(createRegionGroupsPlan);
+    partitionInfo.offerRegionMaintainTasks(offerPlan);
 
     // The DELETE task is filtered out at offer time; only the two CREATE tasks remain queued.
     List<RegionMaintainTask> queuedTasks = partitionInfo.getRegionMaintainEntryList();
@@ -177,6 +205,165 @@ public class PartitionInfoTest {
     loaded.processLoadSnapshot(snapshotDir);
     Assert.assertEquals(partitionInfo, loaded);
     Assert.assertEquals(2, loaded.getRegionMaintainEntryList().size());
+  }
+
+  @Test
+  public void testBatchRemoveAllRegionCreateTasksAndSnapshot() throws TException, IOException {
+    final String database = "root.sg";
+    final String otherDatabase = "root.other";
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema(database)));
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema(otherDatabase)));
+
+    final TRegionReplicaSet region0 =
+        generateTRegionReplicaSet(0, new TConsensusGroupId(TConsensusGroupType.DataRegion, 0));
+    final TRegionReplicaSet region1 =
+        generateTRegionReplicaSet(10, new TConsensusGroupId(TConsensusGroupType.DataRegion, 1));
+    final TRegionReplicaSet otherRegion =
+        generateTRegionReplicaSet(20, new TConsensusGroupId(TConsensusGroupType.DataRegion, 2));
+    final CreateRegionGroupsPlan createRegionGroupsPlan = new CreateRegionGroupsPlan();
+    createRegionGroupsPlan.addRegionGroup(database, region0);
+    createRegionGroupsPlan.addRegionGroup(database, region1);
+    createRegionGroupsPlan.addRegionGroup(otherDatabase, otherRegion);
+    partitionInfo.createRegionGroups(createRegionGroupsPlan);
+
+    final OfferRegionMaintainTasksPlan offerPlan = new OfferRegionMaintainTasksPlan();
+    offerPlan.appendRegionMaintainTask(
+        new RegionCreateTask(region0.getDataNodeLocations().get(0), database, region0));
+    offerPlan.appendRegionMaintainTask(
+        new RegionCreateTask(region0.getDataNodeLocations().get(1), database, region0));
+    offerPlan.appendRegionMaintainTask(
+        new RegionCreateTask(region1.getDataNodeLocations().get(0), database, region1));
+    offerPlan.appendRegionMaintainTask(
+        new RegionCreateTask(
+            otherRegion.getDataNodeLocations().get(0), otherDatabase, otherRegion));
+    partitionInfo.offerRegionMaintainTasks(offerPlan);
+    Assert.assertEquals(4, partitionInfo.getRegionMaintainEntryList().size());
+    // Retrying an uncertain Consensus write must not duplicate durable create tasks.
+    partitionInfo.offerRegionMaintainTasks(offerPlan);
+    Assert.assertEquals(4, partitionInfo.getRegionMaintainEntryList().size());
+
+    partitionInfo.preDeleteDatabase(
+        new PreDeleteDatabasePlan(database, PreDeleteDatabasePlan.PreDeleteType.EXECUTE));
+    partitionInfo.batchRemoveRegionCreateTasks(new BatchRemoveRegionCreateTasksPlan(database));
+    Assert.assertEquals(1, partitionInfo.getRegionMaintainEntryList().size());
+    Assert.assertEquals(
+        otherRegion.getRegionId(), partitionInfo.getRegionMaintainEntryList().get(0).getRegionId());
+
+    // Replaying the same consensus plan is idempotent, and a snapshot cannot revive removed tasks.
+    partitionInfo.batchRemoveRegionCreateTasks(new BatchRemoveRegionCreateTasksPlan(database));
+    Assert.assertTrue(partitionInfo.processTakeSnapshot(snapshotDir));
+    final PartitionInfo loaded = new PartitionInfo();
+    loaded.processLoadSnapshot(snapshotDir);
+    Assert.assertEquals(1, loaded.getRegionMaintainEntryList().size());
+    Assert.assertEquals(
+        otherRegion.getRegionId(), loaded.getRegionMaintainEntryList().get(0).getRegionId());
+  }
+
+  @Test
+  public void testCancelledTasksCannotAffectRecreatedDatabase() {
+    final String database = "root.sg";
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema(database)));
+    final TRegionReplicaSet oldRegion =
+        generateTRegionReplicaSet(0, new TConsensusGroupId(TConsensusGroupType.DataRegion, 0));
+    final CreateRegionGroupsPlan oldCreatePlan = new CreateRegionGroupsPlan();
+    oldCreatePlan.addRegionGroup(database, oldRegion);
+    partitionInfo.createRegionGroups(oldCreatePlan);
+
+    final OfferRegionMaintainTasksPlan oldOfferPlan = new OfferRegionMaintainTasksPlan();
+    oldOfferPlan.appendRegionMaintainTask(
+        new RegionCreateTask(oldRegion.getDataNodeLocations().get(0), database, oldRegion));
+    partitionInfo.offerRegionMaintainTasks(oldOfferPlan);
+    Assert.assertEquals(1, partitionInfo.getRegionMaintainEntryList().size());
+
+    partitionInfo.preDeleteDatabase(
+        new PreDeleteDatabasePlan(database, PreDeleteDatabasePlan.PreDeleteType.EXECUTE));
+    final BatchRemoveRegionCreateTasksPlan oldCancellation =
+        new BatchRemoveRegionCreateTasksPlan(database);
+    partitionInfo.batchRemoveRegionCreateTasks(oldCancellation);
+    Assert.assertTrue(partitionInfo.getRegionMaintainEntryList().isEmpty());
+
+    // A late offer from the old create procedure is rejected after PRE_DELETE.
+    partitionInfo.offerRegionMaintainTasks(oldOfferPlan);
+    Assert.assertTrue(partitionInfo.getRegionMaintainEntryList().isEmpty());
+
+    partitionInfo.deleteDatabase(new DeleteDatabasePlan(database));
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema(database)));
+    final TRegionReplicaSet newRegion =
+        generateTRegionReplicaSet(10, new TConsensusGroupId(TConsensusGroupType.DataRegion, 1));
+    final CreateRegionGroupsPlan newCreatePlan = new CreateRegionGroupsPlan();
+    newCreatePlan.addRegionGroup(database, newRegion);
+    partitionInfo.createRegionGroups(newCreatePlan);
+    final OfferRegionMaintainTasksPlan newOfferPlan = new OfferRegionMaintainTasksPlan();
+    newOfferPlan.appendRegionMaintainTask(
+        new RegionCreateTask(newRegion.getDataNodeLocations().get(0), database, newRegion));
+    partitionInfo.offerRegionMaintainTasks(newOfferPlan);
+
+    // Replaying the old cancellation is a no-op because the same-name database is not pre-deleted.
+    // A late task offer from the old RegionGroup is rejected by Region ownership validation.
+    partitionInfo.batchRemoveRegionCreateTasks(oldCancellation);
+    partitionInfo.offerRegionMaintainTasks(oldOfferPlan);
+    Assert.assertEquals(1, partitionInfo.getRegionMaintainEntryList().size());
+    Assert.assertEquals(
+        newRegion.getRegionId(), partitionInfo.getRegionMaintainEntryList().get(0).getRegionId());
+  }
+
+  @Test
+  public void testCreateRegionGroupsRejectsPreDeletedAndMissingDatabase()
+      throws DatabaseNotExistsException {
+    final String database = "root.lifecycle";
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema(database)));
+
+    final CreateRegionGroupsPlan preDeletedPlan = new CreateRegionGroupsPlan();
+    preDeletedPlan.addRegionGroup(
+        database,
+        generateTRegionReplicaSet(0, new TConsensusGroupId(TConsensusGroupType.DataRegion, 1)));
+    partitionInfo.preDeleteDatabase(
+        new PreDeleteDatabasePlan(database, PreDeleteDatabasePlan.PreDeleteType.EXECUTE));
+
+    TSStatus status = partitionInfo.createRegionGroups(preDeletedPlan);
+    Assert.assertEquals(TSStatusCode.DATABASE_NOT_EXIST.getStatusCode(), status.getCode());
+    Assert.assertTrue(
+        partitionInfo.getAllReplicaSets(database, TConsensusGroupType.DataRegion).isEmpty());
+
+    final CreateRegionGroupsPlan missingPlan = new CreateRegionGroupsPlan();
+    missingPlan.addRegionGroup(
+        "root.missing",
+        generateTRegionReplicaSet(10, new TConsensusGroupId(TConsensusGroupType.SchemaRegion, 2)));
+    status = partitionInfo.createRegionGroups(missingPlan);
+    Assert.assertEquals(TSStatusCode.DATABASE_NOT_EXIST.getStatusCode(), status.getCode());
+  }
+
+  @Test
+  public void testBatchedCreateRegionGroupsPlanIsValidatedAtomically()
+      throws DatabaseNotExistsException {
+    final String existingDatabase = "root.existing";
+    partitionInfo.createDatabase(
+        new DatabaseSchemaPlan(
+            ConfigPhysicalPlanType.CreateDatabase, new TDatabaseSchema(existingDatabase)));
+
+    final CreateRegionGroupsPlan batchedPlan = new CreateRegionGroupsPlan();
+    batchedPlan.addRegionGroup(
+        existingDatabase,
+        generateTRegionReplicaSet(0, new TConsensusGroupId(TConsensusGroupType.DataRegion, 40)));
+    batchedPlan.addRegionGroup(
+        "root.missing",
+        generateTRegionReplicaSet(10, new TConsensusGroupId(TConsensusGroupType.DataRegion, 41)));
+
+    final TSStatus status = partitionInfo.createRegionGroups(batchedPlan);
+    Assert.assertEquals(TSStatusCode.DATABASE_NOT_EXIST.getStatusCode(), status.getCode());
+    Assert.assertEquals(
+        0, partitionInfo.getRegionGroupCount(existingDatabase, TConsensusGroupType.DataRegion));
+    Assert.assertEquals(42, partitionInfo.generateNextRegionGroupId());
   }
 
   @Test
@@ -322,14 +509,15 @@ public class PartitionInfoTest {
     dataNodeLocation.setMPPDataExchangeEndPoint(new TEndPoint("0.0.0.0", 10740));
     dataNodeLocation.setDataRegionConsensusEndPoint(new TEndPoint("0.0.0.0", 10760));
     dataNodeLocation.setSchemaRegionConsensusEndPoint(new TEndPoint("0.0.0.0", 10750));
+    final TDataNodeLocation secondDataNodeLocation = dataNodeLocation.deepCopy().setDataNodeId(1);
 
     TRegionReplicaSet regionReplicaSet = new TRegionReplicaSet();
     regionReplicaSet.setRegionId(new TConsensusGroupId(TConsensusGroupType.DataRegion, 0));
-    regionReplicaSet.setDataNodeLocations(Collections.singletonList(dataNodeLocation));
+    regionReplicaSet.setDataNodeLocations(List.of(dataNodeLocation, secondDataNodeLocation));
 
     OfferRegionMaintainTasksPlan offerPlan = new OfferRegionMaintainTasksPlan();
     offerPlan.appendRegionMaintainTask(
-        new RegionCreateTask(dataNodeLocation, "root.sg", regionReplicaSet));
+        new RegionCreateTask(secondDataNodeLocation, "root.sg", regionReplicaSet));
     offerPlan.appendRegionMaintainTask(
         new RegionCreateTask(dataNodeLocation, "root.sg", regionReplicaSet));
     offerPlan.appendRegionMaintainTask(
